[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Scripts/multiplayer_menu.gd" id="1_m8k5l"]
[ext_resource type="FontFile" uid="uid://deg2678b2066r" path="res://Assets/Font/Minecraft.ttf" id="2_n9j6m"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m8k5l")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_n9j6m")
theme_override_font_sizes/font_size = 36
text = "MULTIJUGADOR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="RoomCodeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RoomCodeLabel" type="Label" parent="VBoxContainer/RoomCodeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_n9j6m")
theme_override_font_sizes/font_size = 18
text = "CÓDIGO DE SALA:"
horizontal_alignment = 1

[node name="RoomCodeInput" type="LineEdit" parent="VBoxContainer/RoomCodeContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n9j6m")
theme_override_font_sizes/font_size = 24
text = "1234"
alignment = 1
max_length = 4

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HostButton" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n9j6m")
theme_override_font_sizes/font_size = 20
text = "CREAR SALA"

[node name="JoinButton" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n9j6m")
theme_override_font_sizes/font_size = 20
text = "UNIRSE A SALA"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_n9j6m")
theme_override_font_sizes/font_size = 16
text = "Ingresa un código de sala"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n9j6m")
theme_override_font_sizes/font_size = 18
text = "VOLVER"